--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-sm bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
@@ -62,37 +62,8 @@
 
     <main>
         <div class="filtro">
-            <div class="checkbox">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria1">
-                    <label class="form-check-label" for="categoria1">
-                        Category
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria2">
-                    <label class="form-check-label" for="categoria2">
-                        Category
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria3">
-                    <label class="form-check-label" for="categoria3">
-                        Category
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria4">
-                    <label class="form-check-label" for="categoria4">
-                        Category
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria5">
-                    <label class="form-check-label" for="categoria5">
-                        Category
-                    </label>
-                </div>
+            <div class="checkbox" id="contenedorFiltro">
+<!--aqui genera checkbox JS-->
             </div>
             <div class="buscador">
                 <form class="d-flex" role="search">
