--- a/past_events.html
+++ b/past_events.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <title>Past Events</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -61,37 +62,8 @@
 
     <main>
         <div class="filtro">
-            <div class="checkbox">
-                <div class="form-check">
-                    <label class="form-check-label" for="categoria1">Cancha
-                        <input class="form-check-input" type="checkbox" value="" id="categoria1">
-                        
-                    </label>
-                </div>
-                <div class="form-check">
-                    <label class="form-check-label" for="categoria2">Campo
-                        <input class="form-check-input" type="checkbox" value="" id="categoria2">
-                        
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria3">
-                    <label class="form-check-label" for="categoria3">
-                        Category
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria4">
-                    <label class="form-check-label" for="categoria4">
-                        Category
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="categoria5">
-                    <label class="form-check-label" for="categoria5">
-                        Category
-                    </label>
-                </div>
+            <div class="checkbox" id="contenedorFiltro">
+                <!--aqui genera checkbox JS-->
             </div>
             <div class="buscador">
                 <form class="d-flex" role="search">
@@ -102,7 +74,7 @@
         </div>
 
         <div class="row" id="contenedorEventos">
-
+            <!--aqui genera cards JS-->
         </div>
     </main>
 
@@ -129,7 +101,9 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/past_events.js"></script>
 </body>
