--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -67,10 +67,14 @@
             </div>
             <div class="buscador">
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="text" name="busqueda" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                    <input class="form-control me-2" type="text" name="busqueda" placeholder="Search..." aria-label="Search">
+                    <!-- <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button> -->
                 </form>
             </div>
+        </div>
+
+        <div class="error" id="error">
+            <!-- <p><b>Error: No se ha encontrado la busqueda...</b></p> -->
         </div>
 
         <div class="row" id="contenedorEventos">
