--- a/details.html
+++ b/details.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <title>Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -50,20 +51,24 @@
     </header>
 
     <main class="details">
-        <div class="card">
-            <div class="card-img">
-                <img src="./assets/music_concert.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-                <h5>Title</h5>
-                <p>Event data.....</p>
-                <p>Event data.....</p>
-                <p>Event data.....</p>
-                <p>Event data.....</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="container" id="containerCard">
+            <div class="card col-11 col-sm-4 col-md-3 col-xl-2">
+                <div class="card-img">
+                    <img src="${objeto.image}" class="card-img-top" alt="{objeto.name}">
+                </div>
+                <div class="card-body">
+                    <h2>${objeto.name}</h2>
+                    <p>${objeto.category}</p>
+                    <p>${objeto.description}</p>
+                </div>
+                <div class="card-footer">
+                    <p>$${objeto.price} USD</p>
+                    <p>${objeto.date}</p>
+                </div>
             </div>
         </div>
     </main>
+
 
     <footer class="pie">
         <div class="container-redes">
@@ -88,7 +93,11 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/details.js"></script>
 </body>
 
 </html>
