--- a/stats.html
+++ b/stats.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <title>Stats</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -70,50 +71,59 @@
                     </tr>
                 </thead> -->
 
-                <tbody>
+                <tbody id="body1">
                     <tr class="eventos">
-                        <td colspan="3"><b>Events Statics</b></td>
+                        <th colspan="3"><b>Events Statics</b></th>
                     </tr>
-                    <tr>
-                        <td>Events with highest % of assistance</td>
-                        <td>Events with lowest % of assistance</td>
-                        <td>Events with larger capacity</td>
+                    <tr class="sub">
+                        <td><b>Events with highest % of assistance</b></td>
+                        <td><b>Events with lowest % of assistance</b></td>
+                        <td><b>Events with larger capacity</b></td>
                     </tr>
-                    <tr>
+                    <tr id="primera">
+                        <!-- <td>_</td>
                         <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
+                        <td>_</td> -->
                     </tr>
+                </tbody>
+                <tbody id="body2">
                     <tr class="eventos">
-                        <td colspan="3"><b>Upcoming events statics by category</b></td>
+                        <th colspan="3"><b>Upcoming events statics by category</b></th>
+                    </tr>
+                    <tr class="sub">
+                        <td><b>Categories</b></td>
+                        <td><b>Revenues</b></td>
+                        <td><b>Percentage of assistance</b></td>
+                    </tr>
+                    <tr id="segunda">
+                        <!-- <td>asdasd</td>
+                        <td>asdas</td>
+                        <td>asd</td>
                     </tr>
                     <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of assistance</td>
+                        <td>_aasd</td>
+                        <td>asd_</td>
+                        <td>asdad_</td> -->
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
-                    <tr>
-                        <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
-                    </tr>
+                </tbody>
+                <tbody id="body3">
                     <tr class="eventos">
-                        <td colspan="3"><b>Past events statics by category</b></td>
+                        <th colspan="3"><b>Past events statics by category</b></th>
+                    </tr>
+                    <tr class="sub">
+                        <td><b>Categories</b></td>
+                        <td><b>Revenues</b></td>
+                        <td><b>Percentage of assistance</b></td>
+                    </tr>
+                    <tr id="tercera">
+                        <!-- <td>_</td>
+                        <td>_</td>
+                        <td>_</td>
                     </tr>
                     <tr>
                         <td>_</td>
                         <td>_</td>
-                        <td>_</td>
-                    </tr>
-                    <tr>
-                        <td>_</td>
-                        <td>_</td>
-                        <td>_</td>
+                        <td>_</td> -->
                     </tr>
                 </tbody>
             </table>
@@ -147,6 +157,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/stats.js"></script>
 </body>
 
 </html>
